Styled scrollbar; Added pay invoice button on manage invoices page; Other fixes

--- a/src/app/components/main-view/manage-expenses/manage-expenses.component.css
+++ b/src/app/components/main-view/manage-expenses/manage-expenses.component.css
@@ -43,3 +43,17 @@ body {
 .borders {
   border: solid 2px red;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 137, 0.5);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 13750);
+}
