--- a/src/app/components/main-view/manage-invoices/manage-invoices.component.css
+++ b/src/app/components/main-view/manage-invoices/manage-invoices.component.css
@@ -31,11 +31,25 @@ body {
 .btn {
   background-color: #00A1F2;
   border-color: #00A1F2;
+  color: white !important;
 }
 
 .btn:hover {
   background-color: #0b5f89;
   border-color: #0b5f89;
+  color: white !important;
+}
+
+.pay-button {
+  background-color: darkgreen !important;
+  border-color: darkgreen !important;
+  color: white !important;
+}
+
+.pay-button:hover {
+  background-color: limegreen !important;
+  border-color: limegreen !important;
+  color: white !important;
 }
 
 .error-message {
@@ -50,4 +64,18 @@ body {
   background-color: #ECF2F9;
   height: calc(100vh - 106px);
   overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 137, 0.5);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 13750);
 }
