--- a/src/app/components/main-view/manage-receipts/manage-receipts.component.css
+++ b/src/app/components/main-view/manage-receipts/manage-receipts.component.css
@@ -39,3 +39,17 @@ body {
   background-color: #ECF2F9;
   overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 137, 0.5);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 137, 50);
+}
