--- a/src/app/components/main-view/receipt-form/receipt-form.component.css
+++ b/src/app/components/main-view/receipt-form/receipt-form.component.css
@@ -30,3 +30,17 @@
   overflow-x: hidden;
   height: calc(100vh - 106px);
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 137, 0.5);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(11, 95, 13750);
+}
